# SDL-GameFramework

./: .gitignore  CMakeLists.txt
cmake/: GameFramework.pc.in  GameFrameworkConfig.cmake.in  version.h.in
docs/: APIReference.md  Components.md  QuickStart.md  README.md
src/: CMakeLists.txt  animation.h  asset-manager.cpp  asset-manager.h  audiomanager.cpp  audiomanager.h  camera.h  collider.cpp  collider.h  game.cpp  game.h  gameobject.cpp  gameobject.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  object_pool.h  scene.cpp  scene.h  sprite.cpp  sprite.h  transform.cpp  transform.h  vector2d.cpp  vector2d.h
src/debug/: debug_logger.h
src/ui/: ui_button.h  ui_element.h  ui_text.h
tests/: CMakeLists.txt  animation_test.cpp  camera_test.cpp  collider_test.cpp  debug_logger_test.cpp  transform_test.cpp  ui_test.cpp  vector2d_test.cpp
